--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
     <meta name="author" content="{{ site.author }}">
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/forestryio/ubuild-blocks@1.0.0/dist/css/ubuild.css"/>
-    <link rel="stylesheet" href="mystyle.css"/>
+    <link rel="stylesheet" href="{{ 'mystyle.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
   </head>
   <body>
