--- a/_includes/block-feature-2.html
+++ b/_includes/block-feature-2.html
@@ -6,7 +6,7 @@
       </div>
       <div class="column text">
           <h2><span class="light">{{ section.headline }}</span></h2>
-          <p>{{ section.content }}</p>
+          <div class="columnp"><p>{{ section.content }}</p></div>
       </div>
     </div>
   </div>
