--- a/_includes/block-feature-1.html
+++ b/_includes/block-feature-1.html
@@ -6,7 +6,7 @@
     <div class="columns">
       <div class="column text">
         <h2><span class="light">{{ section.headline }}</span></h2>
-        <div class="columnp"><p>{{ section.content }}</p></div<
+        <div class="columnp"><p>{{ section.content }}</p></div>
       </div>
       <div class="column media">
         <img src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" loading="lazy">
