--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -2,7 +2,7 @@
 
   <div class="block-header-2--logo">
     <a href="{{ "/" | relative_url }}">
-      <img src="{{ section.logo | relative_url }}" alt="{{ site.title }}">
+      <img src="{{ section.logo | relative_url }}" alt="{{ site.title }}" class="circle">
     </a>
   </div>
 
