--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,3 +21,25 @@
     <meta name="theme-color" content="#ffffff">
       </head>
   <body>
+    <header class="block block-header-2">
+
+  <div class="block-header-2--logo">
+    <a href="/">
+      <img src="/uploads/MIppxngn_400x400.jpg" alt="やまだけんいち" class="circle">
+    </a>
+  </div>
+
+  <nav class="block-header-2--nav">
+    <ul>
+        
+        <li class="nav-item "><a href="/index.html#who">自己紹介</a></li>
+        
+        <li class="nav-item "><a href="/works.html">作品</a></li>
+        
+        <li class="nav-item "><a href="/privacy.html">プライバシーへの配慮</a></li>
+        
+    </ul>
+    <a class="button primary small block-header-2--cta" href="https://github.com/r-40021">GitHub</a>
+  </nav>
+
+</header>
