--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,8 @@
         <li class="nav-item "><a href="/works.html">作品</a></li>
         
         <li class="nav-item "><a href="/privacy.html">プライバシーへの配慮</a></li>
+      
+        <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
         
     </ul>
     <a class="button primary small block-header-2--cta" href="https://github.com/r-40021">GitHub</a>
