--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
+<html lang="ja">
+
+<head prefix=”og: http://ogp.me/ns#”> <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <base href="{{ site.baseurl }}">
@@ -19,29 +19,39 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-      </head>
-  <body>
+    <!--OGP-->
+    <meta property=”og:title” content=”{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}” />
+    {% if page.url == "index.html" %}
+    <meta property=”og:type” content=”website” />
+    {% else %}
+    <meta property=”og:type” content=”article” />
+    {% endif %}
+    <meta property=”og:url” content=”{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}” />
+    <meta property=”og:image” content=”https://r-40021.github.io/uploads/ogp.png” />
+</head>
+
+<body>
     <header class="block block-header-2">
 
-  <div class="block-header-2--logo">
-    <a href="/">
-      <img src="/uploads/MIppxngn_400x400.jpg" alt="やまだけんいち" class="circle">
-    </a>
-  </div>
+        <div class="block-header-2--logo">
+            <a href="/">
+                <img src="/uploads/MIppxngn_400x400.jpg" alt="やまだけんいち" class="circle">
+            </a>
+        </div>
 
-  <nav class="block-header-2--nav">
-    <ul>
-        
-        <li class="nav-item "><a href="/index.html#who">自己紹介</a></li>
-        
-        <li class="nav-item "><a href="/works.html">作品</a></li>
-        
-        <li class="nav-item "><a href="/privacy.html">プライバシーへの配慮</a></li>
-      
-        <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
-        
-    </ul>
-    <a class="button primary small block-header-2--cta" href="https://github.com/r-40021">GitHub</a>
-  </nav>
+        <nav class="block-header-2--nav">
+            <ul>
 
-</header>
+                <li class="nav-item "><a href="/index.html#who">自己紹介</a></li>
+
+                <li class="nav-item "><a href="/works.html">作品</a></li>
+
+                <li class="nav-item "><a href="/privacy.html">プライバシーへの配慮</a></li>
+
+                <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
+
+            </ul>
+            <a class="button primary small block-header-2--cta" href="https://github.com/r-40021">GitHub</a>
+        </nav>
+
+    </header>
