--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,8 @@
     {% endif %}
     <meta property=”og:url” content=”{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}” />
     <meta property=”og:image” content=”https://r-40021.github.io/uploads/ogp.png” />
+    <meta property="og:description" content="{{ site.description }}" />
+    <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
 </head>
 
 <body>
