--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
     <meta property=”og:image” content=”https://r-40021.github.io/uploads/ogp.png” />
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
+    <meta name="twitter:card" content="summary_large_image"></meta>
 </head>
 
 <body>
