GitHub　新しいタブで

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,7 +54,7 @@
                 <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
 
             </ul>
-            <a class="button primary small block-header-2--cta" href="https://github.com/r-40021">GitHub</a>
+            <a class="button primary small block-header-2--cta" href="https://github.com/r-40021" target="_blank">GitHub</a>
         </nav>
 
     </header>
