--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
     <!--OGP-->
     <meta property=”og:title” content=”{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}” />
     <meta property=”og:url” content=”{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}” />
-    {% if page.url == "index.html" %}
+    {% if page.url == "/" %}
     <meta property=”og:type” content=”website” />
     {% else %}
     <meta property=”og:type” content=”article” />
