--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
     {% else %}
     <meta property=”og:type” content=”article” />
     {% endif %}    
-    <meta property=”og:image” content=”https://r-40021.github.io/uploads/ogp.png” />
+    <meta property=”og:image” content=”https://r-40021.github.io/uploads/ogp.jpg” />
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
     <meta name="twitter:card" content="summary_large_image"></meta>
