--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,14 +21,14 @@
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <!--OGP-->
-    <meta property=”og:title” content=”{% if page.title %}{{page.title}} - {% endif %}{{site.title}}” />
-    <meta property=”og:url” content=”{{page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url}}” />
-    {% if page.url == "/" %}<meta property=”og:type” content=”website” />{% else %}<meta property=”og:type” content=”article” />
-    {% endif %}    
-    <meta property=”og:image” content=”https://r-40021.github.io/uploads/ogp.png” />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:url" content="{{page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url}}" />
+    {% if page.url == "/" %}<meta property="og:type" content="website" />{% else %}<meta property="og:type" content="article" />{% endif %} 
+    <meta property="og:title" content="{% if page.title %}{{page.title}} - {% endif %}{{site.title}}" />
     <meta property="og:description" content="{{site.description}}" />
     <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
+
 </head>
 
 <body>
