--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <base href="{{ site.baseurl }}">
-    <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+    <title>{% if page.title && page.url != "/" %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="author" content="{{ site.author }}">
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:url" content="{{page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url}}" />
     {% if page.url == "/" %}<meta property="og:type" content="website" />{% else %}<meta property="og:type" content="article" />{% endif %} 
-    <meta property="og:title" content="{% if page.title %}{{page.title}} - {% endif %}{{site.title}}" />
+    <meta property="og:title" content="{% if page.title && page.url != "/" %}{{ page.title }} - {% endif %}{{ site.title }}" />
     <meta property="og:description" content="{{site.description}}" />
     <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
     <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
