--- a/_includes/block-feature-1.html
+++ b/_includes/block-feature-1.html
@@ -9,7 +9,7 @@
         <div class="columnp"><p>{{ section.content }}</p></div>
       </div>
       <div class="column media">
-        <img src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" loading="lazy">
+        <img data-src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" loading="lazy">
       </div>
     </div>
   </div>
