--- a/_includes/block-feature-2.html
+++ b/_includes/block-feature-2.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns">
       <div class="column media">
-          <img data-src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" loading="lazy">
+          <img data-src="{{ section.media.image | relative_url }}" alt="{{ section.media.alt_text }}" class=”lazyload”>
       </div>
       <div class="column text">
           <h2><span class="light">{{ section.headline }}</span></h2>
