--- a/_includes/block-footer-2.html
+++ b/_includes/block-footer-2.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns">
       <div class="column">
-        <img data-src="{{ section.image }}" width="24" height="auto" alt="Logo">
+        <img data-src="{{ section.image }}" width="24" height="auto" alt="Logo" class=”lazyload”>
       </div>
       <div class="column">
         {{ section.col_2 }}
