--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -12,7 +12,7 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
         {% endif %}
       </div>
       <div class="column media">
-        <img data-src="{{ section.image.image | relative_url }}" alt="{{ section.image.alt_text }}" loading="lazy" class="circle lazyload">
+        <img data-src="{{ section.image.image | relative_url }}" alt="{{ section.image.alt_text }}" class="circle lazyload">
       </div>
     </div>
   </div>
