--- a/_includes/block-header-3.html
+++ b/_includes/block-header-3.html
@@ -2,7 +2,7 @@
 
   <div class="block-header-3--logo">
     <a href="{{ site.url | relative_url }}">
-      <img data-src="{{ section.logo | relative_url }}" alt="{{ site.title }}" class=”lazyload”>
+      <img data-src="{{ section.logo | relative_url }}" alt="{{ site.title }}">
     </a>
   </div>
 
