Revert "Update block-header-2.html"
This reverts commit 781a2150f8b2ca6560bfe1999e4e18e7a8362bd2.

--- a/_includes/block-header-2.html
+++ b/_includes/block-header-2.html
@@ -2,7 +2,7 @@
 
   <div class="block-header-2--logo">
     <a href="{{ "/" | relative_url }}">
-      <img data-src="{{ section.logo | relative_url }}" alt="{{ site.title }}" class="circle lazyload">
+      <img data-src="{{ section.logo | relative_url }}" alt="{{ site.title }}" class="circle">
     </a>
   </div>
 
