Revert "Update block-header-1.html"
This reverts commit 9940dea53fb3a3ab8f6e5c0be195efba528c0d63.

--- a/_includes/block-header-1.html
+++ b/_includes/block-header-1.html
@@ -2,7 +2,7 @@
 
   <div class="block-header-1--logo">
     <a href="{{ "/" | relative_url }}">
-      <img class="circle" data-src="{{ section.logo | relative_url }}" alt="{{ site.title }}" class=”lazyload”>
+      <img class="circle" data-src="{{ section.logo | relative_url }}" alt="{{ site.title }}">
     </a>
   </div>
 
