Revert "Update block-footer-2.html"
This reverts commit 6a8f2da42311473c293572b06515311cb3e68e03.

--- a/_includes/block-footer-2.html
+++ b/_includes/block-footer-2.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns">
       <div class="column">
-        <img data-src="{{ section.image }}" width="24" height="auto" alt="Logo" class=”lazyload”>
+        <img data-src="{{ section.image }}" width="24" height="auto" alt="Logo">
       </div>
       <div class="column">
         {{ section.col_2 }}
