Revert "Update block-media-2.html"
This reverts commit 586cf1ade8aa01f7412cb528059c27f69144ef2e.

--- a/_includes/block-media-2.html
+++ b/_includes/block-media-2.html
@@ -3,7 +3,7 @@
     <div class="columns">
       <div class="column">
         <figure>
-          <img data-src="{{ section.image_1.image | relative_url }}" alt="{{ section.image_1.caption }}" loading="lazy">
+          <img src="{{ section.image_1.image | relative_url }}" alt="{{ section.image_1.caption }}" loading="lazy">
           {% if section.image_1.caption %}
           <figcaption>{{ section.image_1.caption }}</figcaption>
           {% endif %}
