Add theme color

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,7 @@
     <meta property="og:description" content="{{site.description}}" />
     <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
     <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
+    <meta name="theme-color" content="#ffcb3c" />
 
 </head>
 
