反応を速く

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,9 @@
     <title>{% if page.title and page.url != "/" %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="author" content="{{ site.author }}">
     <meta name="description" content="{{ site.description }}">
-    <style>*{box-sizing:border-box;margin:0;padding:0}h1{font-size:48px;font-size:3rem;font-weight:700;letter-spacing:-1.6px;letter-spacing:-.1rem;line-height:1}h1 span.light{font-weight:300}h2{font-size:32px;font-size:2rem;font-weight:700}h2 span.light{font-weight:300}p{font-size:16px;font-size:1rem;line-height:1.35}p,ul{font-weight:400;color:#666}.container{width:1200px;max-width:100%;margin:0 auto}.block{padding:64px 32px;padding:4rem 2rem}.button{outline:none;border:0;padding:12.8px 24px;padding:.8rem 1.5rem;border-radius:.3rem;font-size:12.8px;font-size:.8rem;font-weight:500;position:relative;text-decoration:none}.button.primary{background-color:#ffcb3c;color:#fff}.button.primary.inverted{background-color:#fff;color:#000}.button.small{font-size:9.6px;font-size:.6rem;padding:8px 16px;padding:.5rem 1rem}.block-header-2{display:-ms-flexbox;display:flex;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-align:center;align-items:center;padding:16px 32px;padding:1rem 2rem}.block-header-2--logo img{max-height:24px;max-height:1.5rem}.block-header-2--nav{display:-ms-flexbox;display:flex;-ms-flex-align:baseline;align-items:baseline}.block-header-2 .nav-item{display:inline-block;list-style:none;margin-right:16px;margin-right:1rem;font-size:13.6px;font-size:.85rem}.block-header-2 .nav-item a{text-decoration:none;color:#2b2b2b}.block-header-2 .nav-item:last-of-type{margin:0}.block-header-2--cta{margin-left:32px;margin-left:2rem}.block-hero-2{--bg:#ffcb3c;--text:#fff;-ms-flex-direction:column;flex-direction:column;-ms-flex-pack:center;justify-content:center;min-height:100vh;background-color:var(--bg);color:var(--text);background-repeat:no-repeat;background-size:auto 100%;background-position:100%}.block-hero-2,.block-hero-2 .columns{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center}.block-hero-2 .columns{-ms-flex-wrap:wrap;flex-wrap:wrap;-ms-flex-pack:justify;justify-content:space-between}.block-hero-2 .column.text{-ms-flex:0 0 100%;flex:0 0 100%;text-align:center}.block-hero-2 .column.media{-ms-flex:0 0 100%;flex:0 0 100%;display:-ms-flexbox;display:flex;-ms-flex-pack:center;justify-content:center;-ms-flex-align:center;align-items:center;margin-top:96px;margin-top:6rem}.block-hero-2 .column.text p{margin:16px 0 32px;margin:1rem 0 2rem;color:#fff;font-size:16px;font-size:1rem}.block-hero-2 .column.media img{width:100%}.block-footer-1{font-size:12.8px;font-size:.8rem;color:#666;text-align:center}ul{margin:16px 0;margin:1rem 0}.block-feature-1 .columns{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-wrap:wrap;flex-wrap:wrap;text-align:center}.block-feature-1 .column.text{margin-right:0;margin-bottom:32px;margin-bottom:2rem}.block-feature-1 .column.media,.block-feature-1 .column.text{-ms-flex:0 0 100%;flex:0 0 100%}.block-feature-1 .column.text h2{margin-bottom:16px;margin-bottom:1rem}.block-feature-1 .column.media img{max-width:100%}.block-feature-2 .columns{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-wrap:wrap;flex-wrap:wrap;text-align:center}.block-feature-2 .column.text{-ms-flex:0 0 100%;flex:0 0 100%;-ms-flex-order:1;order:1;margin-bottom:32px;margin-bottom:2rem}.block-feature-2 .column.media{-ms-flex:0 0 100%;flex:0 0 100%;-ms-flex-order:2;order:2;margin-right:0}.block-feature-2 .column.text h2{margin-bottom:16px;margin-bottom:1rem}.block-feature-2 .column.media img{max-width:100%}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;font-size:16px}::-webkit-selection{background:#ffedbc;color:#333}.columnp{text-align:justify}.circle{object-fit:cover;border-radius:50%}html{scroll-behavior:smooth}.button.primary.body{margin-top:3px;margin-bottom:3px;display:inline-block}span{display:inline-block}</style>
+    <style>
+        *{box-sizing:border-box;margin:0;padding:0}h1{font-size:3pc;font-size:3rem;font-weight:700;letter-spacing:-.1pc;letter-spacing:-.1rem;line-height:1}h1 span.light{font-weight:300}h2{font-size:2pc;font-size:2rem;font-weight:700}h2 span.light{font-weight:300}p{font-size:1pc;font-size:1rem;line-height:1.35}p,ul{font-weight:400;color:#666}.container{width:75pc;max-width:100%;margin:0 auto}.block{padding:4pc 2pc;padding:4rem 2rem}.button{outline:0;border:0;padding:.8pc 24px;padding:.8rem 1.5rem;border-radius:.3rem;font-size:.8pc;font-size:.8rem;font-weight:500;position:relative;text-decoration:none}.button.primary{background-color:#ffcb3c;color:#fff}.button.primary.inverted{background-color:#fff;color:#000}.button.small{font-size:.6pc;font-size:.6rem;padding:8px 1pc;padding:.5rem 1rem}.block-header-2{display:-ms-flexbox;display:flex;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-align:center;align-items:center;padding:1pc 2pc;padding:1rem 2rem}.block-header-2--logo img{max-height:24px;max-height:1.5rem}.block-header-2--nav{display:-ms-flexbox;display:flex;-ms-flex-align:baseline;align-items:baseline}.block-header-2 .nav-item{display:inline-block;list-style:none;margin-right:1pc;margin-right:1rem;font-size:.85pc;font-size:.85rem}.block-header-2 .nav-item a{text-decoration:none;color:#2b2b2b}.block-header-2 .nav-item:last-of-type{margin:0}.block-header-2--cta{margin-left:2pc;margin-left:2rem}.block-hero-2{--bg:#ffcb3c;--text:#fff;-ms-flex-direction:column;flex-direction:column;-ms-flex-pack:center;justify-content:center;min-height:100vh;background-color:var(--bg);color:var(--text);background-repeat:no-repeat;background-size:auto 100%;background-position:100%}.block-hero-2,.block-hero-2 .columns{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center}.block-hero-2 .columns{-ms-flex-wrap:wrap;flex-wrap:wrap;-ms-flex-pack:justify;justify-content:space-between}.block-hero-2 .column.text{-ms-flex:0 0 100%;flex:0 0 100%;text-align:center}.block-hero-2 .column.media{-ms-flex:0 0 100%;flex:0 0 100%;display:-ms-flexbox;display:flex;-ms-flex-pack:center;justify-content:center;-ms-flex-align:center;align-items:center;margin-top:6pc;margin-top:6rem}.block-hero-2 .column.text p{margin:1pc 0 2pc;margin:1rem 0 2rem;color:#fff;font-size:1pc;font-size:1rem}.block-hero-2 .column.media img{width:100%}.block-footer-1{font-size:.8pc;font-size:.8rem;color:#666;text-align:center}ul{margin:1pc 0;margin:1rem 0}.block-feature-1 .columns{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-wrap:wrap;flex-wrap:wrap;text-align:center}.block-feature-1 .column.text{margin-right:0;margin-bottom:2pc;margin-bottom:2rem}.block-feature-1 .column.media,.block-feature-1 .column.text{-ms-flex:0 0 100%;flex:0 0 100%}.block-feature-1 .column.text h2{margin-bottom:1pc;margin-bottom:1rem}.block-feature-1 .column.media img{max-width:100%}.block-feature-2 .columns{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-wrap:wrap;flex-wrap:wrap;text-align:center}.block-feature-2 .column.text{-ms-flex:0 0 100%;flex:0 0 100%;-ms-flex-order:1;order:1;margin-bottom:2pc;margin-bottom:2rem}.block-feature-2 .column.media{-ms-flex:0 0 100%;flex:0 0 100%;-ms-flex-order:2;order:2;margin-right:0}.block-feature-2 .column.text h2{margin-bottom:1pc;margin-bottom:1rem}.block-feature-2 .column.media img{max-width:100%}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;font-size:1pc}::-webkit-selection{background:#ffedbc;color:#333}.columnp{text-align:justify}.circle{object-fit:cover;border-radius:50%}html{scroll-behavior:smooth}.button.primary.body{margin-top:3px;margin-bottom:3px;display:inline-block}span{display:inline-block}header{pointer-events: none;}
+    </style>
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" media="print" onload="this.media='all'">
     <!--favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -22,9 +24,13 @@
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <!--OGP-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="og:url" content="{{page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url}}" />
-    {% if page.url == "/" %}<meta property="og:type" content="website" />{% else %}<meta property="og:type" content="article" />{% endif %} 
-    <meta property="og:title" content="{% if page.title and page.url != "/" %}{{ page.title }} - {% endif %}{{ site.title }}" />
+    <meta property="og:url"
+        content="{{page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url}}" />
+    {% if page.url == "/" %}
+    <meta property="og:type" content="website" />{% else %}
+    <meta property="og:type" content="article" />{% endif %}
+    <meta property="og:title" content="{% if page.title and page.url != " /" %}{{ page.title }} - {% endif %}{{
+        site.title }}" />
     <meta property="og:description" content="{{site.description}}" />
     <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
     <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
@@ -49,13 +55,23 @@
                 <li class="nav-item "><a href="/works.html">作品</a></li>
 
                 <li class="nav-item "><a href="/privacy.html">プライバシーへの配慮</a></li>
-                
+
                 <li class="nav-item "><a href="/browser">動作環境</a></li>
 
                 <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
 
             </ul>
-            <a class="button primary small block-header-2--cta" href="https://github.com/r-40021" target="_blank">GitHub</a>
+            <a class="button primary small block-header-2--cta" href="https://github.com/r-40021"
+                target="_blank">GitHub</a>
         </nav>
 
     </header>
+    <script>
+        const hideQuery = new URL(window.location.href).searchParams.get("fromApp");
+        let headerElement = document.getElementsByTagName("header")[0];
+        if (hideQuery === "true") {
+            headerElement.style.display = "none";
+        } else {
+            headerElement.style.pointerEvents = "auto";
+        }
+    </script>
