--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <footer class="block block-footer-1">
       <div class="container">
-        <p>© 2021 Kenichi Yamada<br>このページのソースコードは<a href="https://github.com/r-40021/r-40021.github.io/blob/master/LICENSE" title="" target="_blank">MIT License</a>の下で二次利用できます。<br>画像は、フリー素材ですが作者が公表しているライセンスを遵守する必要があります。→<a href="license.html" title="">各素材ごとのライセンス</a></p>
+        <p>© 2021 Kenichi Yamada<br><a href="license.html" title="イラストのライセンス">イラストのライセンス</a></p>
       </div>
     </footer>
     <script src="../assets/js/hideMenu.js"></script>
