--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
 
                 <li class="nav-item "><a href="/works.html">作品</a></li>
 
-                <li class="nav-item "><a href="/privacy.html">プライバシーへの配慮</a></li>
+                <li class="nav-item "><a href="/privacy.html">プライバシー</a></li>
 
                 <li class="nav-item "><a href="/browser">動作環境</a></li>
 
