--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,8 @@
     <meta property="og:site_name" content="やまだけんいち(Kenichi Yamada)" />
     <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
     <meta name="theme-color" content="#ffcb3c" />
-
+    <script data-goatcounter="https://2vyj09dj8fxuy8uygrir.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 
 <body>
