--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,7 @@
         <nav class="block-header-2--nav">
             <ul>
 
-                <li class="nav-item "><a href="/index.html#who">自己紹介</a></li>
+                <li class="nav-item "><a href="/index.html#about">概要</a></li>
 
                 <li class="nav-item "><a href="/works.html">作品</a></li>
 
