--- a/_includes/block-full-width-html.html
+++ b/_includes/block-full-width-html.html
@@ -1,5 +1,5 @@
 <!-- full-width-->
-<section class="block">
+<section class="block full-width-html">
   <div class="container">
     <div class="columns">
       <div class="column text">
