--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,13 +51,13 @@
 
                 <li class="nav-item "><a href="/#about">概要</a></li>
 
-                <li class="nav-item "><a href="/works">作品</a></li>
+                <li class="nav-item "><a href="/works.html">作品</a></li>
 
-                <li class="nav-item "><a href="/privacy">プライバシー</a></li>
+                <li class="nav-item "><a href="/privacy.html">プライバシー</a></li>
 
-                <li class="nav-item "><a href="/browser">動作環境</a></li>
+                <li class="nav-item "><a href="/browser.html">動作環境</a></li>
 
-                <li class="nav-item "><a href="/contact">お問い合わせ</a></li>
+                <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
 
             </ul>
             <a class="button primary small block-header-2--cta" href="https://github.com/r-40021"
