--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,12 @@
-    <footer class="block block-footer-1">
+</div>
+   <footer class="block block-footer-1">
       <div class="container">
         <p>© 2021 Kenichi Yamada<br><a href="license.html" title="イラストのライセンス">イラストのライセンス</a></p>
       </div>
     </footer>
     <script src="../assets/js/hideMenu.js"></script>
+    <script src="../assets/js/pjax.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
 <script defer>
         if ("serviceWorker" in navigator) {
             /*Service Worker登録
