--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,8 @@
     <script src="../assets/js/hideMenu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
     <script src="../assets/js/pjax.js"></script>
+    <script data-goatcounter="https://2vyj09dj8fxuy8uygrir.goatcounter.com/count" async
+        src="//gc.zgo.at/count.js"></script>
 <script defer>
         if ("serviceWorker" in navigator) {
             /*Service Worker登録
