--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
     <meta property="og:type" content="article" />{% endif %}
     <meta property="og:title" content="{% if page.title and page.url != " /" %}{{ page.title }} - {% endif %}{{
         site.title }}" />
-    <meta property="og:description" content="{{site.description}}" />
+    <meta property="og:description" content="{% if page.page_sections[0].content and page.url != "/" %}{{ page.page_sections[0].content | strip_html }}{% else %}{{ site.description | strip_html }}{% endif %}" />
     <meta property="og:site_name" content="やまだアプリ工房" />
     <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
     <meta name="theme-color" content="#ffcb3c" />
