--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,7 +64,7 @@
 
             </ul>
             <a class="button primary small block-header-2--cta" href="https://github.com/r-40021"
-                target="_blank">GitHub</a>
+                target="_blank" rel="noopener noreferrer">GitHub</a>
         </nav>
 
     </header>
