--- a/_includes/block-full-1.html
+++ b/_includes/block-full-1.html
@@ -1,5 +1,5 @@
 <!-- full-width-->
-<section class="block block-full-1">
+<section class="block-full-1">
   <div class="container">
     <div class="columns">
       <div class="column text">
