--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
         <p>© 2022 Frog<br><a href="license.html" title="イラストのライセンス">イラストのライセンス</a></p>
       </div>
     </footer>
-    <script src="../assets/js/hideMenu.js"></script>
+    <script src="/assets/js/hideMenu.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
-    <script src="../assets/js/pjax.js"></script>
+    <script src="/assets/js/pjax.js"></script>
     <script data-goatcounter="https://2vyj09dj8fxuy8uygrir.goatcounter.com/count" async
         src="//gc.zgo.at/count.js"></script>
-<script defer>
+    <script defer>
         if ("serviceWorker" in navigator) {
             /*Service Worker登録
             (引用:https://developers.google.com/web/fundamentals/primers/service-workers)*/
