--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,31 +42,22 @@
         <div class="progress-bar"></div>
       </div>
     <header class="block block-header-2">
-
         <div class="block-header-2--logo">
             <a href="/">
-                <img src="/uploads/MIppxngn_400x400.jpg" alt="やまだけんいち" class="circle">
+                <img src="/uploads/MIppxngn_400x400.jpg" alt="アイコン" class="circle">
             </a>
         </div>
-
         <nav class="block-header-2--nav">
             <ul>
-
                 <li class="nav-item "><a href="/#about">概要</a></li>
-
                 <li class="nav-item "><a href="/works.html">作品</a></li>
-
                 <li class="nav-item "><a href="/privacy.html">プライバシー</a></li>
-
                 <li class="nav-item "><a href="/browser.html">動作環境</a></li>
-
                 <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
-
             </ul>
             <a class="button primary small block-header-2--cta" href="https://github.com/r-40021"
                 target="_blank" rel="noopener noreferrer">GitHub</a>
         </nav>
-
     </header>
     <script>
         const hideQuery = new URL(window.location.href).searchParams.get("fromApp");
