--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,321 @@
     <base href="{{ site.baseurl }}">
     <title>{% if page.title and page.url != "/" %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="author" content="{{ site.author }}">
-    <meta name="description" content="{% if page.page_sections[0].content and page.url != "/" %}{{ page.page_sections[0].content | strip_html }}{% else %}{{ site.description | strip_html }}{% endif %}">
-    <style>*{box-sizing:border-box;margin:0;padding:0}h1{font-family:-apple-system,blinkMacSystemFont,"Helvetica Neue","Segoe UI","Roboto","Arial",'Noto Sans JP',"Yu Gothic","YuGothic",Meiryo,sans-serif;margin-bottom:.5em}h1{font-size:48px;font-size:3rem;font-weight:700;letter-spacing:-1.6px;letter-spacing:-.1rem;line-height:1.4}h1 span.light{font-weight:300}p{font-size:16px;font-size:1rem;line-height:1.7;margin-bottom:.7em}a{color:#d6a10b;text-decoration:none}p,ul{font-weight:400;color:#666}@media screen and (min-width:700px){h1{font-size:3.5rem}}@media screen and (min-width:1000px){h1{font-size:4rem}}.container{width:1200px;max-width:100%;margin:0 auto}.block{padding:64px 32px;padding:4rem 2rem}@media screen and (min-width:700px){.block{padding:6rem 4rem}}.button{outline:0;border:0;padding:12.8px 24px;padding:.8rem 1.5rem;border-radius:.3rem;font-size:12.8px;font-size:.8rem;font-weight:bold;position:relative;text-decoration:none}.button.primary{background-color:#efbb2d;color:#fff}.button.primary.inverted{background-color:#efbb2d;color:#fff}.button.small{font-size:9.6px;font-size:.6rem;padding:8px 16px;padding:.5rem 1rem}.block-header-2{display:-ms-flexbox;display:flex;-ms-flex-pack:justify;justify-content:space-between;-ms-flex-align:center;align-items:center;padding:16px 32px;padding:1rem 2rem}.block-header-2--logo img{max-height:24px;max-height:1.5rem}.block-header-2--nav{display:-ms-flexbox;display:flex;-ms-flex-align:baseline;align-items:baseline}.block-header-2 .nav-item{display:inline-block;list-style:none;margin-right:16px;margin-right:1rem;font-size:13.6px;font-size:.85rem}.block-header-2 .nav-item a{text-decoration:none;color:#2b2b2b}.block-header-2 .nav-item:last-of-type{margin:0}.block-header-2--cta{margin-left:32px;margin-left:2rem}.block-hero-2{--bg:#f9f9f9;--text:#505050;-ms-flex-direction:column;flex-direction:column;-ms-flex-pack:center;justify-content:center;min-height:100vh;background-color:var(--bg);color:var(--text);background-repeat:no-repeat;background-size:auto 100%;background-position:100%}.block-header-2--logo{margin-right:1em}.block-hero-2,.block-hero-2 .columns{display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center}.block-hero-2 .columns{-ms-flex-wrap:wrap;flex-wrap:wrap;-ms-flex-pack:justify;justify-content:space-between}.block-hero-2 .column.text{-ms-flex:0 0 100%;flex:0 0 100%;text-align:center}.block-hero-2 .column.media{-ms-flex:0 0 100%;flex:0 0 100%;display:-ms-flexbox;display:flex;-ms-flex-pack:center;justify-content:center;-ms-flex-align:center;align-items:center;margin-top:96px;margin-top:6rem}.block-hero-2 .column.text p{margin:16px 0 32px;margin:1rem 0 2rem;color:#606060;font-size:16px;font-size:1rem}.block-hero-2 .column.media img{width:100%}@media screen and (min-width:700px){.block-hero-2 .column.text{-ms-flex:0 0 45%;flex:0 0 45%;text-align:left}.block-hero-2 .column.media{-ms-flex:0 0 55%;flex:0 0 55%;display:-ms-flexbox;display:flex;-ms-flex-pack:center;justify-content:center;-ms-flex-align:center;align-items:center;margin-top:0}.block-hero-2 .column.media img{width:45vw;max-width:520px}}.block-hero-2 span.light strong{background:linear-gradient(transparent 75%,#ffce58 75%)}ul{margin:16px 0;margin:1rem 0}body{font-family:-apple-system,blinkMacSystemFont,"Helvetica Neue","Segoe UI","Roboto","Arial","Hiragino Kaku Gothic ProN",YuGothicM,"Yu Gothic",YuGothic,Meiryo,sans-serif;-webkit-font-smoothing:antialiased;-moz-font-smoothing:antialiased;font-size:16px;color:#606060;overflow-x:hidden}@font-face{font-family:YuGothicM;font-weight:normal;src:local("YuGothic-Medium"),local("Yu Gothic Medium"),local("YuGothic-Regular")}@font-face{font-family:YuGothicM;font-weight:bold;src:local("YoGothic-Bold"),local("Yu Gothic")}::-webkit-selection{background:#ffedbc;color:#333}.circle{object-fit:cover;border-radius:50%}html{scroll-behavior:smooth}span{display:inline-block}header.block.block-header-2{width:100vw;overflow-x:auto;white-space:nowrap}.progress{background-color:#f8f3c6;height:0;width:100%;position:fixed;top:0;left:0;box-shadow:rgba(255,251,0,.2) 0 2px 8px 0;opacity:0}.progress-bar{background:#ffd000;height:100%;width:100%}ul{padding-inline-start:1.5em}</style>
+    <meta name="description" content="{% if page.page_sections[0].content and page.url != " /" %}{{
+        page.page_sections[0].content | strip_html }}{% else %}{{ site.description | strip_html }}{% endif %}">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0
+        }
+
+        h1 {
+            font-family: -apple-system, blinkMacSystemFont, "Helvetica Neue", "Segoe UI", "Roboto", "Arial", 'Noto Sans JP', "Yu Gothic", "YuGothic", Meiryo, sans-serif;
+            margin-bottom: .5em
+        }
+
+        h1 {
+            font-size: 48px;
+            font-size: 3rem;
+            font-weight: 700;
+            letter-spacing: -1.6px;
+            letter-spacing: -.1rem;
+            line-height: 1.4
+        }
+
+        h1 span.light {
+            font-weight: 300
+        }
+
+        p {
+            font-size: 16px;
+            font-size: 1rem;
+            line-height: 1.7;
+            margin-bottom: .7em
+        }
+
+        a {
+            color: #d6a10b;
+            text-decoration: none
+        }
+
+        p,
+        ul {
+            font-weight: 400;
+            color: #666
+        }
+
+        @media screen and (min-width:700px) {
+            h1 {
+                font-size: 3.5rem
+            }
+        }
+
+        @media screen and (min-width:1000px) {
+            h1 {
+                font-size: 4rem
+            }
+        }
+
+        .container {
+            width: 1200px;
+            max-width: 100%;
+            margin: 0 auto
+        }
+
+        .block {
+            padding: 64px 32px;
+            padding: 4rem 2rem
+        }
+
+        @media screen and (min-width:700px) {
+            .block {
+                padding: 6rem 4rem
+            }
+        }
+
+        .button {
+            outline: 0;
+            border: 0;
+            padding: 12.8px 24px;
+            padding: .8rem 1.5rem;
+            border-radius: .3rem;
+            font-size: 12.8px;
+            font-size: .8rem;
+            font-weight: bold;
+            position: relative;
+            text-decoration: none
+        }
+
+        .button.primary {
+            background-color: #efbb2d;
+            color: #fff
+        }
+
+        .button.primary.inverted {
+            background-color: #efbb2d;
+            color: #fff
+        }
+
+        .button.small {
+            font-size: 9.6px;
+            font-size: .6rem;
+            padding: 8px 16px;
+            padding: .5rem 1rem
+        }
+
+        .block-header-2 {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-pack: justify;
+            justify-content: space-between;
+            -ms-flex-align: center;
+            align-items: center;
+            padding: 16px 32px;
+            padding: 1rem 2rem
+        }
+
+        .block-header-2--logo img {
+            max-height: 24px;
+            max-height: 1.5rem
+        }
+
+        .block-header-2--nav {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: baseline;
+            align-items: baseline
+        }
+
+        .block-header-2 .nav-item {
+            display: inline-block;
+            list-style: none;
+            margin-right: 16px;
+            margin-right: 1rem;
+            font-size: 13.6px;
+            font-size: .85rem
+        }
+
+        .block-header-2 .nav-item a {
+            text-decoration: none;
+            color: #2b2b2b
+        }
+
+        .block-header-2 .nav-item:last-of-type {
+            margin: 0
+        }
+
+        .block-header-2--cta {
+            margin-left: 32px;
+            margin-left: 2rem
+        }
+
+        .block-hero-2 {
+            --bg: #f9f9f9;
+            --text: #505050;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            -ms-flex-pack: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: var(--bg);
+            color: var(--text);
+            background-repeat: no-repeat;
+            background-size: auto 100%;
+            background-position: 100%
+        }
+
+        .block-header-2--logo {
+            margin-right: 1em
+        }
+
+        .block-hero-2,
+        .block-hero-2 .columns {
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: center;
+            align-items: center
+        }
+
+        .block-hero-2 .columns {
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            -ms-flex-pack: justify;
+            justify-content: space-between
+        }
+
+        .block-hero-2 .column.text {
+            -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+            text-align: center
+        }
+
+        .block-hero-2 .column.media {
+            -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-pack: center;
+            justify-content: center;
+            -ms-flex-align: center;
+            align-items: center;
+            margin-top: 96px;
+            margin-top: 6rem
+        }
+
+        .block-hero-2 .column.text p {
+            margin: 16px 0 32px;
+            margin: 1rem 0 2rem;
+            color: #606060;
+            font-size: 16px;
+            font-size: 1rem
+        }
+
+        .block-hero-2 .column.media img {
+            width: 100%
+        }
+
+        @media screen and (min-width:700px) {
+            .block-hero-2 .column.text {
+                -ms-flex: 0 0 45%;
+                flex: 0 0 45%;
+                text-align: left
+            }
+
+            .block-hero-2 .column.media {
+                -ms-flex: 0 0 55%;
+                flex: 0 0 55%;
+                display: -ms-flexbox;
+                display: flex;
+                -ms-flex-pack: center;
+                justify-content: center;
+                -ms-flex-align: center;
+                align-items: center;
+                margin-top: 0
+            }
+
+            .block-hero-2 .column.media img {
+                width: 45vw;
+                max-width: 520px
+            }
+        }
+
+        .block-hero-2 span.light strong {
+            background: linear-gradient(transparent 75%, #ffce58 75%)
+        }
+
+        ul {
+            margin: 16px 0;
+            margin: 1rem 0
+        }
+
+        body {
+            font-family: -apple-system, blinkMacSystemFont, "Helvetica Neue", "Segoe UI", "Roboto", "Arial", "Hiragino Kaku Gothic ProN", YuGothicM, "Yu Gothic", YuGothic, Meiryo, sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-font-smoothing: antialiased;
+            font-size: 16px;
+            color: #606060;
+            overflow-x: hidden
+        }
+
+        @font-face {
+            font-family: YuGothicM;
+            font-weight: normal;
+            src: local("YuGothic-Medium"), local("Yu Gothic Medium"), local("YuGothic-Regular")
+        }
+
+        @font-face {
+            font-family: YuGothicM;
+            font-weight: bold;
+            src: local("YoGothic-Bold"), local("Yu Gothic")
+        }
+
+        ::-webkit-selection {
+            background: #ffedbc;
+            color: #333
+        }
+
+        .circle {
+            object-fit: cover;
+            border-radius: 50%
+        }
+
+        html {
+            scroll-behavior: smooth
+        }
+
+        span {
+            display: inline-block
+        }
+
+        header.block.block-header-2 {
+            width: 100vw;
+            overflow-x: auto;
+            white-space: nowrap
+        }
+
+        .progress {
+            background-color: #f8f3c6;
+            height: 0;
+            width: 100%;
+            position: fixed;
+            top: 0;
+            left: 0;
+            box-shadow: rgba(255, 251, 0, .2) 0 2px 8px 0;
+            opacity: 0
+        }
+
+        .progress-bar {
+            background: #ffd000;
+            height: 100%;
+            width: 100%
+        }
+
+        ul {
+            padding-inline-start: 1.5em
+        }
+    </style>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}"
         media="print" onload="this.media='all'">
     <!--favicon-->
@@ -30,7 +343,8 @@
     <meta property="og:type" content="article" />{% endif %}
     <meta property="og:title" content="{% if page.title and page.url != " /" %}{{ page.title }} - {% endif %}{{
         site.title }}" />
-    <meta property="og:description" content="{% if page.page_sections[0].content and page.url != "/" %}{{ page.page_sections[0].content | strip_html }}{% else %}{{ site.description | strip_html }}{% endif %}" />
+    <meta property="og:description" content="{% if page.page_sections[0].content and page.url != " /" %}{{
+        page.page_sections[0].content | strip_html }}{% else %}{{ site.description | strip_html }}{% endif %}" />
     <meta property="og:site_name" content="やまだアプリ工房" />
     <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
     <meta name="theme-color" content="#ffcb3c" />
@@ -40,25 +354,27 @@
 <body data-barba="wrapper">
     <div class="progress" id="progress">
         <div class="progress-bar"></div>
-      </div>
-    <header class="block block-header-2">
-        <div class="block-header-2--logo">
-            <a href="/">
-                <img src="/uploads/MIppxngn_400x400.jpg" alt="アイコン" class="circle">
-            </a>
-        </div>
-        <nav class="block-header-2--nav">
-            <ul>
-                <li class="nav-item "><a href="/#about">概要</a></li>
-                <li class="nav-item "><a href="/works.html">作品</a></li>
-                <li class="nav-item "><a href="/privacy.html">プライバシー</a></li>
-                <li class="nav-item "><a href="/browser.html">動作環境</a></li>
-                <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
-            </ul>
-            <a class="button primary small block-header-2--cta" href="https://github.com/r-40021"
-                target="_blank" rel="noopener noreferrer">GitHub</a>
-        </nav>
-    </header>
+    </div>
+    <div class="header-wrapper">
+        <header class="block block-header-2">
+            <div class="block-header-2--logo">
+                <a href="/">
+                    <img src="/uploads/MIppxngn_400x400.jpg" alt="アイコン" class="circle">
+                </a>
+            </div>
+            <nav class="block-header-2--nav">
+                <ul>
+                    <li class="nav-item "><a href="/#about">概要</a></li>
+                    <li class="nav-item "><a href="/works.html">作品</a></li>
+                    <li class="nav-item "><a href="/privacy.html">プライバシー</a></li>
+                    <li class="nav-item "><a href="/browser.html">動作環境</a></li>
+                    <li class="nav-item "><a href="/contact.html">お問い合わせ</a></li>
+                </ul>
+                <a class="button primary small block-header-2--cta" href="https://github.com/r-40021" target="_blank"
+                    rel="noopener noreferrer">GitHub</a>
+            </nav>
+        </header>
+    </div>
     <script>
         const hideQuery = new URL(window.location.href).searchParams.get("fromApp");
         let headerElement = document.getElementsByTagName("header")[0];
