--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -897,7 +897,7 @@ span {
 
 .header-wrapper {
     padding: 10px;
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
     position: fixed;
     z-index: 99999;
