--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,8 @@ ul {
 
 @media screen and (min-width:700px) {
     .block {
-        padding: 6rem 4rem
+        padding: 6rem 4rem;
+        padding-top: 8rem;
     }
 }
 
