--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="/favicon/site.webmanifest">
     <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="/favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <!--OGP-->
     <meta name="twitter:card" content="summary_large_image" />
