--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 </div>
    <footer class="block block-footer-1">
       <div class="container">
-        <p>© 2022 Frog<br><a href="license.html" title="イラストのライセンス">イラストのライセンス</a></p>
+        <p>© 2022 Frog<br><a href="/license" title="イラストのライセンス">イラストのライセンス</a></p>
       </div>
     </footer>
     <script src="/assets/js/hideMenu.js"></script>
