--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
     <script src="/assets/js/pjax.js"></script>
+    <script src="/assets/js/popupexternallinks.js" defer></script>
     <script data-goatcounter="https://2vyj09dj8fxuy8uygrir.goatcounter.com/count" async
         src="//gc.zgo.at/count.js"></script>
     <script defer>
