[Update] Hide header when scroll

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
     <div class="progress" id="progress">
         <div class="progress-bar"></div>
     </div>
-    <div class="header-wrapper">
+    <div class="header-wrapper" id="header-wrapper">
         <header class="block block-header-2">
             <div class="block-header-2--logo">
                 <a href="/">
