--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 </div>
    <footer class="block block-footer-1">
       <div class="container">
-        <p>© 2022 Frog<br><a href="/license" title="イラストのライセンス">イラストのライセンス</a></p>
+        <p>&copy; 2022 Frog</p>
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
