--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
     <meta property="og:description" content="{% if page.page_sections[0].content and page.url != " /" %}{{
         page.page_sections[0].content | strip_html }}{% else %}{{ site.description | strip_html }}{% endif %}" />
     <meta property="og:site_name" content="やまだアプリ工房" />
-    <meta property="og:image" content="https://r-40021.github.io/uploads/ogp.png" />
+    <meta property="og:image" content="https://www.frogapp.net/uploads/ogp.png" />
     <meta name="theme-color" content="#4db56a" />
 
 </head>
