--- a/_includes/block-text-1.html
+++ b/_includes/block-text-1.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="columns">
       <div class="column headline">
-        <h2>{{ section.headline }}</h2>
+        <h2 class="word-break">{{ section.headline }}</h2>
       </div>
       <div class="column text">
         {{ section.content }}
