--- a/_includes/block-feature-1.html
+++ b/_includes/block-feature-1.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="columns">
       <div class="column text">
-        <h2><span class="light">{{ section.headline }}</span></h2>
+        <h2><span class="light word-break">{{ section.headline }}</span></h2>
         <div class="columnp"><p>{{ section.content }}</p></div>
       </div>
       <div class="column media">
