Update: make <strong> bold

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ ul {
     color: #666
 }
 
+strong {
+    font-weight: bold;
+}
+
 @media screen and (min-width:700px) {
     h1 {
         font-size: 3.5rem
