--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
         <header class="block block-header-2">
             <div class="block-header-2--logo">
                 <a href="/">
-                    <img src="/uploads/hero/logo.png" alt="アイコン" class="circle">
+                    <img src="/uploads/hero/logo.webp" alt="アイコン" class="circle">
                 </a>
             </div>
             <nav class="block-header-2--nav">
