--- a/_layouts/blocks.html
+++ b/_layouts/blocks.html
@@ -1,3 +1,7 @@
+---
+layout: basic
+---
+
 {% include head.html %}
 {% for section in page.page_sections %}
 {% include block-{{ section.block }}.html %}
