--- a/_includes/block-hero-2.html
+++ b/_includes/block-hero-2.html
@@ -6,9 +6,7 @@ style="background-image: url('{{ section.background_image | relative_url }}')"
     <div class="columns">
       <div class="column text">
         <h1><span class="light word-break">{{ section.headline }}</span></h1>
-        <p>
-          {{ section.content }}
-        </p>     
+        <p>{{ section.content }}</p>
         {% if section.cta and section.cta.enabled == true %}
         <a class="button primary inverted" href="{{ section.cta.url }}">{{ section.cta.button_text }}</a>
         {% endif %}
